adding mic to be always on rather than on button

--- a/templates/index.html
+++ b/templates/index.html
@@ -69,10 +69,11 @@
           <!-- tictactoe board -->
           <div class="game-board-area-button">
             <button id="gameStart">Start Game</button>
-            <button id="voiceCommand" hidden><img id="voiceCommandIcon" src="/static/assets/microphone.svg" alt="Mic Icon"></img></button>
           </div>
 
-          <p id="status" hidden>🎤 Click mic to speak</p>
+          <div>
+            <p id="status" hidden>🎤 Your turn! Speak or choose your position.</p>
+          </div>
 
         </div>
     
